Fix BGRB->RGBA flip in cross-channel filter

The HSV-curve adjustment should be aware of the color spaces, which
may have the channels flipped.

BUG:471350